--- a/Rafaell Portfolio 2/index.html
+++ b/Rafaell Portfolio 2/index.html
@@ -63,8 +63,7 @@
                     <p>O layout é responsivo, adaptando-se a diferentes dispositivos, e utiliza técnicas modernas de design web para garantir uma experiência agradável aos visitantes.</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/meu-portfolio/" target="_blank">Ver projeto ao vivo</a>
-                    <a href="https://github.com/RafaellFerreira1D/Rafaell---Portf-lio" target="_blank">Ver código do projeto</a>
+                    <a href="https://github.com/RafaellFerreira1D/Rafaell---Portf-lio-2.git" target="_blank">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
@@ -92,7 +91,7 @@
     <footer class="container py-5">
         <h2>Entre em contato</h2>
         <div>
-            <a href=>00001125378220sp@al.educacao.sp.gov.br</a>
+            <a href="mailto:00001125378220sp@al.educacao.sp.gov.br">00001125378220sp@al.educacao.sp.gov.br</a>
         </div>
         <p class="my-5 text-center">© Copyright 2025. Produzido por Rafaell Ferreira</p>
     </footer>
